--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+      {
+        "name": "Launch Chrome against localhost",
+        "type": "chrome",
+        "request": "launch",
+        "url": "http://localhost:4200",
+        "sourceMaps": true,
+        "webRoot": "${workspaceRoot}",
+        "sourceMapPathOverrides": {
+            "webpack:///./*": "${workspaceRoot}/*"
+        }
+    },
         {
             "type": "node",
             "request": "launch",
